Follow instruction (https://cwiki.apache.org/confluence/display/HAWQ/Build+and+Install) to build apache hawq on osx 10.11, it fails due to unsupported syntax in libyarn:
1. ./configure 2. make [ 9%] Building CXX object src/CMakeFiles/libyarn-shared.dir/libyarnclient/ApplicationClient.cpp.o cd /Users/wangziming/workplace/incubator-hawq/depends/libyarn/build/src && /usr/bin/g++ -DTEST_HDFS_PREFIX=\"./\" -D_GNU_SOURCE -D__STDC_FORMAT_MACROS -Dlibyarn_shared_EXPORTS -I/Users/wangziming/workplace/incubator-hawq/depends/thirdparty/googletest/googletest/include -I/Users/wangziming/workplace/incubator-hawq/depends/thirdparty/googletest/googlemock/include -I/Users/wangziming/workplace/incubator-hawq/depends/libyarn/src -I/Users/wangziming/workplace/incubator-hawq/depends/libyarn/src/common -I/Users/wangziming/workplace/incubator-hawq/depends/libyarn/build/src -I/usr/local/include -I/usr/include/libxml2 -I/Users/wangziming/workplace/incubator-hawq/depends/libyarn/mock -fno-omit-frame-pointer -msse4.2 -std=c++0x -O2 -g -DNDEBUG -fPIC -o CMakeFiles/libyarn-shared.dir/libyarnclient/ApplicationClient.cpp.o -c /Users/wangziming/workplace/incubator-hawq/depends/libyarn/src/libyarnclient/ApplicationClient.cpp /Users/wangziming/workplace/incubator-hawq/depends/libyarn/src/libyarnclient/ApplicationClient.cpp:76:10: error: no template named 'vector'; did you mean 'std::vector'? for (vector<RMInfo>::iterator it = rmConfInfos.begin(); ^~~~~~ std::vector /Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/vector:457:29: note: 'std::vector' declared here class _LIBCPP_TYPE_VIS_ONLY vector ^ /Users/wangziming/workplace/incubator-hawq/depends/libyarn/src/libyarnclient/ApplicationClient.cpp:79:14: error: no template named 'vector'; did you mean 'std::vector'? for (vector<RMInfo>::iterator it2 = rmInfos.begin(); ^~~~~~ std::vector /Library/Developer/CommandLineTools/usr/bin/../include/c++/v1/iterator:1244:75: note: 'std::vector' declared here template <class _Tp, class _Alloc> friend class _LIBCPP_TYPE_VIS_ONLY vector; ^ /Users/wangziming/workplace/incubator-hawq/depends/libyarn/src/libyarnclient/ApplicationClient.cpp:98:17: warning: format specifies type 'int' but the argument has type 'size_type' (aka 'unsigned long') [-Wformat] rmInfos.size()); ^~~~~~~~~~~~~~ /Users/wangziming/workplace/incubator-hawq/depends/libyarn/src/common/Logger.h:59:47: note: expanded from macro 'LOG' Yarn::Internal::RootLogger.printf(s, fmt, ##_VA_ARGS_) ^~~~~~~~~~~ 1 warning and 2 errors generated. make[4]: *** [src/CMakeFiles/libyarn-shared.dir/libyarnclient/ApplicationClient.cpp.o] Error 1 make[3]: *** [src/CMakeFiles/libyarn-shared.dir/all] Error 2 make[2]: *** [all] Error 2 make[1]: *** [build] Error 2 make: *** [all] Error 2
- links to