HAWQ-1636. Fix compile apache hawq failure due to unsupported syntax in libyarn on osx 10.11